--- a/index.html
+++ b/index.html
@@ -998,6 +998,7 @@
 
 
 <!-- projects category section -->
+<!-- working complete not yet
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
@@ -1114,7 +1115,7 @@
             </div>
         </div>
     </section>
-
+  -->
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
