update projects part

--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-3 col-sm-6">
-                    <a href="#" class="portfolio-box" id="project1">
+                    <a class="portfolio-box" id="project1">
                       <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
