Completing basic project forms

--- a/index.html
+++ b/index.html
@@ -1021,15 +1021,14 @@
                     
                     <div class="layer">
                       <div class="bg"></div>
-                      	<div id="layer2" class="pop-layer">
+                      	<div class="pop-layer" id="projectLayer1">
                       		<div class="pop-container">
                       			<div class="pop-conts">
                       				<!--content //-->
-                      				
-              				<ul class="projectList">
-                        <li><iframe src="assets/projects/project1.html" frameborder="0"></iframe></li>
-                        <li><img src="img/portfolio/fullsize/2.jpg" class="img-responsive"></li>
-                      </ul>
+                      				<ul class="projectList">
+                                <li><iframe src="assets/projects/project1.html" frameborder="0"></iframe></li>
+                                <li><img src="img/portfolio/fullsize/2.jpg" class="img-responsive"></li>
+                              </ul>
                       				<div class="btn-r">
                       					<a href="#" class="cbtn">Close</a>
                       				</div>
