--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
 
 
 <!-- projects category section -->
-<!-- working complete not yet -->
+<!-- working complete not yet 
     <section class="no-padding" id="projects">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
@@ -1025,6 +1025,7 @@
                       		<div class="pop-container">
                       			<div class="pop-conts">
                       				<!--content //-->
+				<!--
                       				<ul class="projectList">
                                 <li><iframe src="assets/projects/project1.html" frameborder="0"></iframe></li>
                                 <li><img src="img/portfolio/fullsize/2.jpg" class="img-responsive"></li>
@@ -1032,7 +1033,7 @@
                       				<div class="btn-r">
                       					<a href="#" class="cbtn">Close</a>
                       				</div>
-                      				<!--// content-->
+                      				<!--// content
                       			</div>
                       		</div>
                       	</div>
@@ -1139,7 +1140,7 @@
             </div>
         </div>
     </section>
-  
+  -->
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
